<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">智慧髮髻</string>
    <string name="upload">Photo</string>
    <string name="color">Color</string>
    <string name="color2">Select Color</string>
    <string name="connection">CONNECTION</string>
    <string name="connected">CONNECTED</string>
    <string name="temp">Tempature</string>
    <string name="temp_display">30°C</string>
    <string name="upload2">Select Photo</string>
    <string name="select">Select</string>
    <string name="select_photo">Select</string>
</resources>