<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_upload"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:paddingLeft="70dp"
        android:paddingTop="5dp"
        android:paddingRight="70dp"
        android:paddingBottom="5dp"
        android:text="@string/upload"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_color"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:paddingLeft="75dp"
        android:paddingTop="5dp"
        android:paddingRight="75dp"
        android:paddingBottom="5dp"
        android:text="@string/color"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/connection_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/connection"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/button_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/temp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/temp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/temp_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/connected_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/connected"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/temp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/temp_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/temp_display"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_bluetooth"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:onClick="pairDevice"
        android:background="@null"
        android:contentDescription="@string/temp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_bluetooth_round"
        app:layout_constraintBottom_toTopOf="@+id/connected_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_text"
        app:layout_constraintVertical_bias="0.453" />

</androidx.constraintlayout.widget.ConstraintLayout>